--- a/code/less/icons.less
+++ b/code/less/icons.less
@@ -1,9 +1,8 @@
-.b-ico {
-	background:@background-url-icons no-repeat -9999px -9999px transparent;
+.ico {
+	background:@bg-icons no-repeat -9999px -9999px transparent;
 	display:-moz-inline-stack;
 	display:inline-block;
 	overflow:hidden;
-	margin-right:5px;
 	vertical-align:middle;
 	text-indent:-9999px;
 	font-size:0;
@@ -12,7 +11,7 @@
 }
 
 /* 16 > */
-.b-ico_type_login {
+.ico_type_login {
 	width:10px;
 	height:10px;
 	background-position:0 -306px;
@@ -22,6 +21,13 @@
 /* 16 < */
 
 /* 24 > */
+
+.ico_content_write-guide{
+    background-position:-18px -338px;
+    height:24px;
+    width:24px;
+}
+
 
 /* 24 < */
 
