--- a/code/less/components.less
+++ b/code/less/components.less
@@ -1,1 +1,12 @@
+/* box < */
 
+.box_base {
+    text-align: center;
+    line-height: 50px;
+    font-family: @font-family-narrow;
+    display: block;
+    text-decoration: none;
+    .box_size();
+}
+
+/* box > */
