--- a/code/less/fonts.less
+++ b/code/less/fonts.less
@@ -26,7 +26,7 @@
     src: url('../fonts/PTS75F-webfont.eot');
     src: url('../fonts/PTS75F-webfont.eot?#iefix') format('embedded-opentype'),
          url('../fonts/PTS75F-webfont.woff') format('woff'),
-         url('../../fonts/PTS75F-webfont.ttf') format('truetype'),
+         url('../fonts/PTS75F-webfont.ttf') format('truetype'),
          url('../fonts/PTS75F-webfont.svg#PTSansBold') format('svg');
     font-weight: normal;
     font-style: normal;
