--- a/code/less/layout.less
+++ b/code/less/layout.less
@@ -3,7 +3,7 @@ html, body {
 }
 body {
 	background:@color-body-bg;
-	font:13px/1.45 @font-family-arial;
+	font:17px/1.45 @font-family-base;
 	width: 100%;
 	color:@color-body-text;
 }
@@ -18,7 +18,7 @@ a {
 
 h1, h2, h3 {
 	color:#666666;
-	font-family:@font-family-freeset;
+
 	a {
 		color:#666666;
 		text-decoration:none;
@@ -28,13 +28,13 @@ h1, h2, h3 {
 		}
 	}
 }
-h1.b-page-header {
+h1.page-header {
 	position:relative;
 	a {
 		color:@color-link;
 		text-decoration:underline;
 		&:hover {
-			color:@color-link-hover;
+
 		}
 	}
 }
@@ -49,8 +49,8 @@ h1 {
 h2, h3 { font-size:21px;}
 
 
-/* Content styles > */
-.b-text-block {
+/* Content styles < */
+.text-block {
 	font-size:13px;
 	line-height:18px;
 	h2, h3 {
@@ -70,14 +70,11 @@ h2, h3 { font-size:21px;}
 		margin-bottom:18px;
 	}
 }
-/* Content styles < */
+/* Content styles > */
 
-article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section {
-	display:block;
-}
 
 /* columns > */
-.b-column {
+.column {
 	position: relative;
 }
 
@@ -85,292 +82,134 @@ article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section {
 
 /* columns < */
 
-.b-wrapper {
+.wrapper {
 	position: relative;
-	min-height: 100%;
+	margin:0 auto;
+	width:990px;
 }
 
 /* header > */
-.b-header {
+.header {
+    display:block;
+    position:relative;
+    padding-top:60px;
+}
+
+.logo {
+    float:left;
+    position:relative;
+
+    .link {
+	display: block;
+	text-decoration:none;
+    }
+    img {
 	display:block;
+    }
+
+    .logo__slogan {
+	color:#4b5962;
+	font:14px @font-family-narrow;
+	position:absolute;
+	left:100%;
+	top:-5px;
+	text-transform: uppercase;
+	white-space: nowrap;
+
+	.version {
+	    color:#9a9c9b;
+	    text-transform: none;
+	    padding-right: 5px;
+	}
+    }
+}
+
+
+
+.auth {
+    float:right;
+
+    .auth__section {
+	float:left;
+    }
+
+    .bg-style_red-light:hover {
+	background-color:#cb6263;
+
+	.ico_content_write-guide{
+	    background-position:-18px -364px;
+	}
+    }
+}
+
+
+
+
+.nav {
+    clear: both;
+
+    .nav__item {
+	float:left;
 	position:relative;
-	z-index: 5;
-	font: 12px @font-family-trebuchet;
-	box-shadow: 0 7px 7px rgba(0,0,0,.3);
 
-	.b-header-top {
-		background:@color-header-top-bg;
-		color:@color-header-top-text;
-		line-height:28px;
-		height:30px;
-		position:relative;
-		z-index:2;
-		a, a:hover {
-			text-decoration:none;
-		}
+	.link {
+	    color:#fff;
+	    .opacity(0.8);
+	    display: block;
+	    height:100%;
+	    position:relative;
+	    width:100%;
 	}
-	.b-header-auth {
-		margin:0 0 0 160px;
-		color:@color-header-top-text;
-		float:right;
-		a {
-			color:@color-header-top-text;
-		}
-		.b-header-auth__register {
-			padding-right:10px;
-			margin-right:10px;
-			float:left;
-		}
-		.b-header-auth__login {
-			margin-right:30px;
-			float:left;
-		}
-	}
-	/* .b-header-auth__login-socials {
-			text-align:right;
-			float:right;
-			img {
-				vertical-align:middle;
-			}
-		}
-		.b-login-socials .b-login-socials__item {
-			display:inline;
-		}
-		*/
-	.b-header-content {
-		position:relative;
-		z-index:1;
-		background:@color-header-content-bg url(../images/bg/bg_header.jpg) repeat-x 0 0;
-		color:@color-header-content-text;
-		overflow:hidden;
-		a {
-			color:@color-header-content-text;
-		}
-		.b-stripe__in {
-			height:115px;
-			padding-top:18px;
-			position:relative;
-		}
-		.b-logo,
-		.b-search-block {
-			float:left;
-		}
-		.b-logo {
-			padding-top:5px;
-			width:330px;
-			text-align:left;
-			position:relative;
-			padding-left:10px;
-			a {
-				display:block;
-				width:295px;
-				height:70px;
-				text-decoration:none;
-				text-indent:-9999px;
-				background:url(../images/bg/logo.png) no-repeat 0 0;
-			}
-			.b-logo__slogan {
-				position:absolute;
-				left:90px;
-				top:52px;
-			}
-		}
+    }
 
-		.b-navigation-block {
-			margin-bottom:7px;
-		}
-		.b-navigation .b-navigation__item {
-			display:inline;
-			margin-right:22px;
-		}
-		.b-search-bar {
-			margin-bottom:10px;
-			.b-input-text {
-				line-height:20px;
-				height:22px;
-				padding:4px 30px 4px 10px;
-				width:422px;
-				font:italic 12px @font-family-arial;
-			}
-			.b-form-line {
-				position:relative;
-			}
-			.b-form-button {
-				position:absolute;
-				top:1px;
-				left:436px;
-				.b-input-submit {
-					background:@background-url-icons no-repeat -17px 5px transparent;
-					display:block;
-					overflow:hidden;
-					vertical-align:middle;
-					text-indent:-9999px;
-					font-size:0;
-					width:27px;
-					height:26px;
-					border:0;
-					margin:0;
-					padding:0;
-					cursor:pointer;
-				}
-			}
-		}
-		.b-search-terms {
-			li {
-				display:inline;
-				margin-left:25px;
-				&:first-child {
-					margin-left:0;
-				}
-			}
-		}
-		.b-quote-block {
-			float:right;
-			text-align:right;
-			max-height:115px;
-			overflow:hidden;
-			padding-right:20px;
-			.b-header-socials {
-				margin-bottom:15px;
-				.b-header-socials__item {
-					display:inline;
-					margin-left:10px;
-				}
-			}
-			.b-quote {
-				width:290px;
-				color:#fff;
-				line-height:13px;
-				&:before,
-				&:after {
-					background:@background-url-icons no-repeat 0 -360px transparent;
-				}
-				&:before {
-					background-position:0 -342px;
-				}
-				&:after {
+    & > .nav__item {
+	height:140px;
+	overflow:hidden;
 
-				}
-			}
-		}
+
+    }
+
+    .menu-item-title {
+	color:#fff;
+	.opacity(0.8);
+	bottom:15px;
+	left:20px;
+	position:absolute;
+	font-weight:normal;
+	font:19px @font-family-narrow;
+	text-transform: uppercase;
+
+
+	.counter {
+	    position:absolute;
+	    top:-30px;
+	    left:0;
 	}
+    }
+
+    .nav__item_type_active-category {
+	width:260px;
+    }
+
+    .nav__item_type_shelter {
+	background: #f3c63d;
+	width:140px;
+
+	&:hover {
+	    background: #fbda56;
+	}
+    }
+
+    .nav__item_type_sections {
+	background: #354bc3;
+	width:390px;
+    }
+    .nav__item_type_category-action {
+	background: #00b88a;
+	width:200px;
+
+	&:hover {
+	    background: #0dc597;
+	}
+    }
 }
-.b-quote {
-	padding:5px 20px;
-	text-align:left;
-	position:relative;
-	.b-quote__author {
-		text-align:right;
-		font-style:italic;
-		margin-top:5px;
-	}
-	.b-quote__author__date {
-		font:italic 11px @font-family-georgia;
-	}
-	&:before,
-	&:after {
-		background:@background-url-icons no-repeat 0 -468px transparent;
-		width:13px;
-		height:10px;
-		display:block;
-		position:absolute;
-		content:'';
-	}
-	&:before {
-		top:0;
-		left:0;
-		background-position:0 -450px;
-	}
-	&:after {
-		top:20px;
-		right:0;
-		background-position:0 -468px;
-	}
-}
-/* header < */
-
-/* main > */
-.b-main {
-	position:relative;
-	z-index: 4;
-	padding-bottom: 240px;
-	.b-main-content {
-		position:relative;
-		z-index:2;
-		.b-stripe__in {
-			background:white;
-			box-shadow:0px 0px 13px #ccc;
-		}
-	}
-}
-/* main < */
-
-
-/* footer > */
-.b-footer-block {
-	z-index:5;
-	position: absolute;
-	bottom: 0;
-	left:0;
-	width:100%;
-	height:240px;
-}
-.b-footer {
-	height:135px;
-	background:@color-footer-bg;
-	color:@color-footer-text;
-	font-size:11px;
-	font:12px @font-family-arial;
-	a {
-		color:@color-footer-text;
-	}
-	.b-stripe__in {
-		padding:20px;
-		width:1140px;
-	}
-	.b-copyright {
-		float:left;
-		font-weight:bold;
-		width:380px;
-		margin-right:30px;
-	}
-	.b-footer__links {
-		float:left;
-		width:500px;
-		.b-list {
-			width:150px;
-			float:left;
-			margin-left:20px;
-			&:first-child {
-				margin-left:0;
-			}
-			.b-list__item {
-				margin-bottom:5px;
-			}
-		}
-	}
-	.b-site-developer {
-		float:right;
-		.b-site-developer__logo {
-			margin-bottom:10px;
-			float: left;
-			a {
-				display:block;
-				width:99px;
-				height:18px;
-				border:0;
-				text-decoration:none;
-				background:url(../images/bg/logo_softline.png)no-repeat 0 0;
-			}
-		}
-		.b-site-developer__copyright{
-			float: left;
-			margin-left: 12px;
-			line-height: 18px;
-			a, a:hover {
-				color:#fff;
-			}
-		}
-	}
-}
-/* footer < */
