--- a/code/less/reset.less
+++ b/code/less/reset.less
@@ -1,7 +1,28 @@
-body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,form,fieldset,input,textarea,p,blockquote,th,td {
-	margin:0;
-	padding:0;
-}
+/* reset < */
+
+    html, body, div, span, object, iframe,
+    h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+    abbr, address, cite, code,
+    del, dfn, em, img, ins, kbd, q, samp,
+    small, strong, sub, sup, var,
+    button,
+    b, i,
+    dl, dt, dd, ol, ul, li,
+    fieldset, form, label, legend,
+    table, caption, tbody, tfoot, thead, tr, th, td,
+    article, aside, canvas, details, figcaption, figure,
+    footer, header, hgroup, menu, nav, section, summary,
+    time, mark, audio, video,
+    form, input, textarea, select, fieldset {
+        margin: 0;
+        padding: 0;
+        border: 0;
+	outline:0;
+        font-size: 100%;
+        vertical-align: baseline;
+        background: transparent;
+    }
+
 table {
 	border-collapse:collapse;
 	border-spacing:0;
@@ -27,3 +48,7 @@ q:before,q:after {
 	content:'';
 }
 abbr,acronym { border:0;}
+
+article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section {
+	display:block;
+}
