--- a/code/less/icons.less
+++ b/code/less/icons.less
@@ -27,8 +27,42 @@
     height:24px;
     width:24px;
 }
-
-
+.ico_content_arrow-next {
+    background-position:-18px -312px;
+    height:20px;
+    .opacity(0.5);
+    width:10px;
+}
+.ico_content_home {
+    background-position:-18px -26px;
+    height:20px;
+    width:20px;
+}
+.ico_content_date {
+    background-position:-18px -234px;
+    height:22px;
+    width:26px;
+}
+.ico_content_themes {
+    background-position:-18px -130px;
+    height:20px;
+    width:24px;
+}
+.ico_content_tags {
+    background-position:-18px -78px;
+    height:15px;
+    width:24px;
+}
+.ico_content_main-category {
+    background-position:-18px -182px;
+    height:16px;
+    width:18px;
+}
+.ico_content_remove {
+    background-position:-18px -390px;
+    height:22px;
+    width:22px;
+}
 /* 24 < */
 
 /* 36 > */
