--- a/code/less/styles.less
+++ b/code/less/styles.less
@@ -11,7 +11,10 @@
 .clearfix:after ,
 .nav:after,
 .header:after,
-.row:after {
+.row:after,
+.page-content:after,
+.columns-layout:after,
+.selector:after {
 	content:"";
 	clear:both;
 	display:block;
