--- a/code/css/styles.css
+++ b/code/css/styles.css
@@ -154,6 +154,13 @@ section {
   font-style: normal;
 }
 @font-face {
+  font-family: 'PTSansItalic';
+  src: url('../fonts/PTS56F-webfont.eot');
+  src: url('../fonts/PTS56F-webfont.eot?#iefix') format('embedded-opentype'), url('../fonts/PTS56F-webfont.woff') format('woff'), url('../fonts/PTS56F-webfont.ttf') format('truetype'), url('../fonts/PTS56F-webfont.svg#PTSansItalic') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
   font-family: 'PTSansBold';
   src: url('../fonts/PTS75F-webfont.eot');
   src: url('../fonts/PTS75F-webfont.eot?#iefix') format('embedded-opentype'), url('../fonts/PTS75F-webfont.woff') format('woff'), url('../fonts/PTS75F-webfont.ttf') format('truetype'), url('../fonts/PTS75F-webfont.svg#PTSansBold') format('svg');
@@ -186,6 +193,8 @@ section {
 .bg-style_blue {
   background-color: #1e319d;
   color: #ffffff;
+  -webkit-transition: background 0.2s ease;
+  transition: background 0.2s ease;
 }
 .bg-style_blue:hover {
   background-color: #354bc3;
@@ -193,6 +202,8 @@ section {
 .bg-style_blue-inverse {
   background-color: #354bc3;
   color: #ffffff;
+  -webkit-transition: background 0.2s ease;
+  transition: background 0.2s ease;
 }
 .bg-style_blue-inverse:hover {
   background-color: #1e319d;
@@ -200,6 +211,8 @@ section {
 .bg-style_red-light {
   background-color: #e15b5c;
   color: #ffffff;
+  -webkit-transition: background 0.2s ease;
+  transition: background 0.2s ease;
 }
 .bg-style_red-light:hover {
   background-color: #cf5a5b;
@@ -207,9 +220,20 @@ section {
 .bg-style_red-dark {
   background-color: #ae4f63;
   color: #ffffff;
+  -webkit-transition: background 0.2s ease;
+  transition: background 0.2s ease;
 }
 .bg-style_red-dark:hover {
   background-color: #9c4859;
+}
+.bg-style_gray-dark {
+  background-color: #4b5962;
+  color: #ffffff;
+  -webkit-transition: background 0.2s ease;
+  transition: background 0.2s ease;
+}
+.bg-style_gray-dark:hover {
+  background-color: #4b5962;
 }
 html,
 body {
@@ -251,6 +275,8 @@ h1.page-header {
 h1.page-header a {
   color: #0042af;
   text-decoration: underline;
+  -webkit-transition: background 0.2s ease;
+  transition: background 0.2s ease;
 }
 h1 {
   font-size: 26px;
@@ -288,16 +314,24 @@ h3 {
   margin-bottom: 18px;
 }
 /* Content styles > */
-/* columns > */
-.column {
-  position: relative;
-}
-/* columns < */
+/*layout < */
 .wrapper {
   position: relative;
   margin: 0 auto;
   width: 990px;
 }
+.columns-layout {
+  position: relative;
+}
+.main {
+  float: left;
+  width: 690px;
+}
+.sidebar {
+  float: right;
+  width: 300px;
+}
+/*  layout > */
 /* header > */
 .header {
   display: block;
@@ -341,14 +375,46 @@ h3 {
 .auth .bg-style_red-light:hover .ico_content_write-guide {
   background-position: -18px -364px;
 }
+/* nav < */
 .nav {
   clear: both;
+}
+.nav .menu-item-title {
+  color: #fff;
+  margin: 0 15px;
+  position: relative;
+  -moz-opacity: 0.8;
+  -khtml-opacity: 0.8;
+  -webkit-opacity: 0.8;
+  opacity: 0.8;
+  -ms-filter: progid:DXImageTransform.Microsoft.Alpha(opacity=80);
+  filter: alpha(opacity=80);
+  font-weight: normal;
+  font: 19px;
+  text-transform: uppercase;
+  cursor: pointer;
+}
+.nav .menu-item-title .counter {
+  color: #aeaeae;
+  font: 16px;
 }
 .nav .nav__item {
   float: left;
   position: relative;
+  height: 140px;
+  overflow: hidden;
 }
-.nav .nav__item .link {
+.nav .nav__item > .menu-item-title {
+  bottom: 15px;
+  left: 0;
+  position: absolute;
+}
+.nav .nav__item > .menu-item-title .counter {
+  position: absolute;
+  top: -20px;
+  left: 0;
+}
+.nav .nav__item > .menu__link {
   color: #fff;
   -moz-opacity: 0.8;
   -khtml-opacity: 0.8;
@@ -359,41 +425,70 @@ h3 {
   display: block;
   height: 100%;
   position: relative;
+  text-decoration: none;
   width: 100%;
 }
-.nav > .nav__item {
-  height: 140px;
-  overflow: hidden;
-}
-.nav .menu-item-title {
-  color: #fff;
-  -moz-opacity: 0.8;
-  -khtml-opacity: 0.8;
-  -webkit-opacity: 0.8;
-  opacity: 0.8;
-  -ms-filter: progid:DXImageTransform.Microsoft.Alpha(opacity=80);
-  filter: alpha(opacity=80);
+.nav .nav__item > .menu__link > .menu-item-title {
   bottom: 15px;
-  left: 20px;
+  left: 0;
   position: absolute;
-  font-weight: normal;
-  font: 19px 'PTSansNarrowRegular', ArialNarrow, Arial, Tahoma, sans-serif;
-  text-transform: uppercase;
 }
-.nav .menu-item-title .counter {
+.nav .nav__item > .menu__link > .menu-item-title .counter {
   position: absolute;
-  top: -30px;
+  top: -20px;
   left: 0;
 }
 .nav .nav__item_type_active-category {
   width: 260px;
 }
+.nav .nav__item_type_active-category .category-changer {
+  top: 0;
+  right: 0;
+  position: absolute;
+  z-index: 10;
+  -webkit-transition: background 0.2s ease;
+  transition: background 0.2s ease;
+}
+.nav .nav__item_type_active-category .category-changer:hover {
+  background: #4258d0;
+}
 .nav .nav__item_type_shelter {
   background: #f3c63d;
   width: 140px;
+  -webkit-transition: background 0.2s ease;
+  transition: background 0.2s ease;
 }
 .nav .nav__item_type_shelter:hover {
   background: #fbda56;
+}
+.nav .nav__item_type_shelter .menu__link:after {
+  content: "";
+  width: 0px;
+  height: 0px;
+  border-style: solid;
+  border-width: 0 0 10px 10px;
+  border-color: transparent transparent #ffffff transparent;
+  position: absolute;
+  bottom: 15px;
+  right: 15px;
+  -moz-opacity: 0.5;
+  -khtml-opacity: 0.5;
+  -webkit-opacity: 0.5;
+  opacity: 0.5;
+  -ms-filter: progid:DXImageTransform.Microsoft.Alpha(opacity=50);
+  filter: alpha(opacity=50);
+}
+.nav .nav__item_type_shelter .menu-item-title {
+  color: #000000;
+  -moz-opacity: 0.6;
+  -khtml-opacity: 0.6;
+  -webkit-opacity: 0.6;
+  opacity: 0.6;
+  -ms-filter: progid:DXImageTransform.Microsoft.Alpha(opacity=60);
+  filter: alpha(opacity=60);
+}
+.nav .nav__item_type_shelter .counter {
+  color: #000000;
 }
 .nav .nav__item_type_sections {
   background: #354bc3;
@@ -402,10 +497,188 @@ h3 {
 .nav .nav__item_type_category-action {
   background: #00b88a;
   width: 200px;
+  -webkit-transition: background 0.2s ease;
+  transition: background 0.2s ease;
 }
 .nav .nav__item_type_category-action:hover {
   background: #0dc597;
 }
+.nav .nav__item_type_category-action > .menu__link .menu-item-title {
+  height: 140px;
+  display: table-cell;
+  margin: 0;
+  vertical-align: middle;
+  position: static;
+  text-align: center;
+  width: 200px;
+}
+.nav .menu_sub {
+  display: none;
+  overflow: hidden;
+  width: 390px;
+}
+.nav .menu_sub .menu__link {
+  display: inline-block;
+  height: 50px;
+  line-height: 52px;
+  -webkit-transition: background 0.2s ease;
+  transition: background 0.2s ease;
+}
+.nav .menu_sub .menu__link:hover {
+  background: #4258d0;
+}
+.nav .menu_sub .menu-item-title {
+  -moz-opacity: 0.44;
+  -khtml-opacity: 0.44;
+  -webkit-opacity: 0.44;
+  opacity: 0.44;
+  -ms-filter: progid:DXImageTransform.Microsoft.Alpha(opacity=44);
+  filter: alpha(opacity=44);
+}
+.nav .menu_sub .counter {
+  color: #91a1f5;
+}
+.menu__main > .menu__item {
+  background: #4b5962;
+  float: left;
+  height: 90px;
+  position: relative;
+  width: 130px;
+  -webkit-transition: background 0.2s ease;
+  transition: background 0.2s ease;
+}
+.menu__main > .menu__item > .menu__link {
+  color: #fff;
+  -moz-opacity: 0.8;
+  -khtml-opacity: 0.8;
+  -webkit-opacity: 0.8;
+  opacity: 0.8;
+  -ms-filter: progid:DXImageTransform.Microsoft.Alpha(opacity=80);
+  filter: alpha(opacity=80);
+  display: block;
+  height: 100%;
+  position: relative;
+  text-decoration: none;
+  width: 100%;
+}
+.menu__main > .menu__item > .menu__link:after {
+  content: "";
+  width: 0px;
+  height: 0px;
+  border-style: solid;
+  border-width: 0 0 10px 10px;
+  border-color: transparent transparent #ffffff transparent;
+  position: absolute;
+  bottom: 15px;
+  right: 15px;
+  -moz-opacity: 0.5;
+  -khtml-opacity: 0.5;
+  -webkit-opacity: 0.5;
+  opacity: 0.5;
+  -ms-filter: progid:DXImageTransform.Microsoft.Alpha(opacity=50);
+  filter: alpha(opacity=50);
+}
+.menu__main > .menu__item > .menu__link > .menu-item-title {
+  bottom: 15px;
+  left: 0;
+  position: absolute;
+}
+.menu__main > .menu__item > .menu__link > .menu-item-title .counter {
+  position: absolute;
+  top: -20px;
+  left: 0;
+}
+.menu__main > .menu__item:hover {
+  background: #1e319d;
+}
+.menu__main .menu__item_active {
+  background: #1e319d;
+}
+.menu__main .menu__item_active .menu_sub {
+  display: block;
+}
+.menu__main .menu__item_active > .menu__link:after {
+  -moz-opacity: 0;
+  -khtml-opacity: 0;
+  -webkit-opacity: 0;
+  opacity: 0;
+  -ms-filter: progid:DXImageTransform.Microsoft.Alpha(opacity=0);
+  filter: alpha(opacity=0);
+}
+.menu__main .menu__item_active > .menu__link > .menu-item-title {
+  -moz-opacity: 1;
+  -khtml-opacity: 1;
+  -webkit-opacity: 1;
+  opacity: 1;
+  -ms-filter: progid:DXImageTransform.Microsoft.Alpha(opacity=100);
+  filter: alpha(opacity=100);
+}
+.menu_sub > .menu__item {
+  display: inline;
+  margin-right: 14px;
+}
+.menu_sub .menu__link {
+  text-decoration: none;
+  font: 15px 'PTSansNarrowRegular', ArialNarrow, Arial, Tahoma, sans-serif;
+  color: #fff;
+  text-transform: uppercase;
+}
+.menu_sub .menu-item-title {
+  font-weight: normal;
+  -moz-opacity: 0.4;
+  -khtml-opacity: 0.4;
+  -webkit-opacity: 0.4;
+  opacity: 0.4;
+  -ms-filter: progid:DXImageTransform.Microsoft.Alpha(opacity=40);
+  filter: alpha(opacity=40);
+}
+.menu_sub .counter {
+  margin-left: 4px;
+  font: 15px 'PTSansNarrowRegular', ArialNarrow, Arial, Tahoma, sans-serif;
+}
+/* nav > */
+/* search < */
+.search {
+  background: #fff;
+  height: 70px;
+}
+.search .field_type_search {
+  background: url(../images/bg/icons.png) no-repeat -60px 13px;
+  font: 30px/30px 'PTSansNarrowRegular', ArialNarrow, Arial, Tahoma, sans-serif;
+  height: 30px;
+  padding: 20px 10px 20px 80px;
+  width: 55%;
+}
+.search .field_type_search:-moz-placeholder {
+  color: #dddddd;
+}
+.search .field_type_search::-moz-placeholder {
+  color: #dddddd;
+}
+.search .field_type_search:-ms-input-placeholder {
+  color: #dddddd;
+}
+.search .field_type_search::-webkit-input-placeholder {
+  color: #dddddd;
+}
+.search .btn_search {
+  right: 0;
+  top: 0;
+  height: 100%;
+  position: absolute;
+}
+.search .btn_search .btn__in {
+  font-size: 19px;
+}
+.search .search-results {
+  color: #dddddd;
+  font: 24px/30px 'PTSansItalic', Arial, Tahoma, sans-serif;
+  position: absolute;
+  right: 130px;
+  top: 21px;
+}
+/* search > */
+/* header > */
 .ico {
   background: url(../images/bg/icons.png) no-repeat -9999px -9999px transparent;
   display: -moz-inline-stack;
@@ -430,11 +703,121 @@ h3 {
   height: 24px;
   width: 24px;
 }
+.ico_content_arrow-next {
+  background-position: -18px -312px;
+  height: 20px;
+  -moz-opacity: 0.5;
+  -khtml-opacity: 0.5;
+  -webkit-opacity: 0.5;
+  opacity: 0.5;
+  -ms-filter: progid:DXImageTransform.Microsoft.Alpha(opacity=50);
+  filter: alpha(opacity=50);
+  width: 10px;
+}
+.ico_content_home {
+  background-position: -18px -26px;
+  height: 20px;
+  width: 20px;
+}
+.ico_content_date {
+  background-position: -18px -234px;
+  height: 22px;
+  width: 26px;
+}
+.ico_content_themes {
+  background-position: -18px -130px;
+  height: 20px;
+  width: 24px;
+}
+.ico_content_tags {
+  background-position: -18px -78px;
+  height: 15px;
+  width: 24px;
+}
+.ico_content_main-category {
+  background-position: -18px -182px;
+  height: 16px;
+  width: 18px;
+}
+.ico_content_remove {
+  background-position: -18px -390px;
+  height: 22px;
+  width: 22px;
+}
 /* 24 < */
 /* 36 > */
 /* 36 < */
 /* 48 > */
-/* 48 < *//* box < */
+/* 48 < */form,
+input,
+textarea,
+select {
+  color: #4b5962;
+  font-family: 'PTSansRegular', Arial, Tahoma, sans-serif;
+  font-size: 14px;
+  line-height: 16px;
+}
+.fieldset {
+  position: relative;
+}
+/* buttons < */
+.btn {
+  color: #fff;
+  cursor: pointer;
+  height: 27px;
+  display: inline-block;
+  font-size: 14px;
+  vertical-align: top;
+  line-height: 26px;
+  position: relative;
+  text-decoration: none;
+  white-space: nowrap;
+}
+.btn .btn__in {
+  color: #fff;
+  -moz-opacity: 0.6;
+  -khtml-opacity: 0.6;
+  -webkit-opacity: 0.6;
+  opacity: 0.6;
+  -ms-filter: progid:DXImageTransform.Microsoft.Alpha(opacity=60);
+  filter: alpha(opacity=60);
+  cursor: pointer;
+  height: 100%;
+  line-height: 26px;
+  display: inline-block;
+  padding: 0 20%;
+  vertical-align: top;
+  text-decoration: none;
+  text-align: center;
+  text-transform: uppercase;
+}
+.btn .ico {
+  position: absolute;
+  top: 8px;
+  left: 8px;
+}
+@-moz-document url-prefix() {
+  input[type="submit"],
+  input[type="button"] {
+    padding-top: 4% !important;
+  }
+}
+input[type="submit"],
+input[type="button"] {
+  cursor: pointer;
+}
+.btn_icon .btn__in {
+  padding-left: 27px;
+}
+.btnset_right {
+  margin-left: 0 !important;
+  text-align: right;
+}
+.btnset_center {
+  margin-left: 0 !important;
+  text-align: center;
+}
+/* buttons > *//* box < */
 .box_base {
   text-align: center;
   line-height: 50px;
@@ -444,11 +827,273 @@ h3 {
   height: 50px;
   width: 50px;
 }
-/* box > *//* clearing > */
+/* box > */
+/* navigator < */
+.navigator {
+  background: #f2f3f2;
+  border-top: 1px solid #e4e6e5;
+  border-bottom: 1px solid #e4e6e5;
+  height: 50px;
+}
+.navigator .navigator__title {
+  background: #1e319d;
+  color: #9ea3cd;
+  cursor: default;
+  font: 15px/52px 'PTSansNarrowRegular', ArialNarrow, Arial, Tahoma, sans-serif;
+  float: left;
+  height: 50px;
+  padding-left: 15px;
+  position: relative;
+  text-transform: uppercase;
+  width: 80px;
+  z-index: 2;
+}
+.navigator .navigator__title:after {
+  content: "";
+  width: 0px;
+  height: 0px;
+  border-style: solid;
+  border-width: 7px 0 7px 7px;
+  border-color: transparent transparent transparent #1e319d;
+  position: absolute;
+  right: -7px;
+  top: 50%;
+  margin-top: -7px;
+}
+.menu_breadcrumbs {
+  overflow: hidden;
+}
+.menu_breadcrumbs .menu__item {
+  border-right: 1px solid #e4e6e5;
+  float: left;
+  height: 50px;
+  position: relative;
+  -webkit-transition: all 0.2s ease;
+  transition: all 0.2s ease;
+}
+.menu_breadcrumbs .menu__item .menu__link {
+  background: #fff;
+  color: #7b848a;
+  font: 14px/52px 'PTSansNarrowRegular', ArialNarrow, Arial, Tahoma, sans-serif;
+  display: block;
+  height: 100%;
+  padding: 0 22px;
+  text-decoration: none;
+  text-transform: uppercase;
+}
+.menu_breadcrumbs .menu__item .ico_content_remove {
+  cursor: pointer;
+  display: none;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin: -11px 0 0 -11px;
+  z-index: 10;
+  -webkit-transition: all 0.2s ease;
+  transition: all 0.2s ease;
+}
+.menu_breadcrumbs .menu__item:hover .menu__link {
+  background: #f2f3f2;
+  -moz-opacity: 0;
+  -khtml-opacity: 0;
+  -webkit-opacity: 0;
+  opacity: 0;
+  -ms-filter: progid:DXImageTransform.Microsoft.Alpha(opacity=0);
+  filter: alpha(opacity=0);
+}
+.menu_breadcrumbs .menu__item:hover .ico_content_remove {
+  display: block;
+}
+.menu_breadcrumbs .menu__item .menu__link_icon {
+  display: block;
+  height: 50px;
+  line-height: 52px;
+  text-align: center;
+  text-decoration: none;
+  width: 50px;
+}
+.menu_breadcrumbs .menu__item_active .menu__link_icon,
+.menu_breadcrumbs .menu__item:hover .menu__link_icon {
+  background-color: #fff;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+}
+.menu_breadcrumbs .menu__item_active .menu__link_icon .ico_content_home,
+.menu_breadcrumbs .menu__item:hover .menu__link_icon .ico_content_home {
+  background-position: -18px 0;
+}
+.menu_breadcrumbs .menu__item_active .menu__link_icon .ico_content_tags,
+.menu_breadcrumbs .menu__item:hover .menu__link_icon .ico_content_tags {
+  background-position: -18px -52px;
+}
+.menu_breadcrumbs .menu__item_active .menu__link_icon .ico_content_themes,
+.menu_breadcrumbs .menu__item:hover .menu__link_icon .ico_content_themes {
+  background-position: -18px -104px;
+}
+/* navigator > */
+/* tags < */
+.tags {
+  background: #fff;
+  margin: 0;
+  padding: 10px 10px;
+}
+.tags .tags__item {
+  display: inline-block;
+  margin: 5px;
+  vertical-align: top;
+}
+.tags .link {
+  color: #7b848a;
+  display: inline-block;
+  font: 14px/22px 'PTSansNarrowRegular', ArialNarrow, Arial, Tahoma, sans-serif;
+  padding: 0 10px;
+  text-decoration: none;
+  text-transform: uppercase;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+}
+.tags .link:hover {
+  background: #f2f3f2;
+  color: #4b5962;
+}
+.tags .tags__item_disabled .link {
+  color: #c4c7ca;
+}
+/* tags > */
+/* page-header < */
+.page-header {
+  background: #4b5962;
+  padding: 35px 15px 25px 15px;
+  position: relative;
+}
+.page-header .page-title {
+  color: #fff;
+  font: 26px/30px 'PTSansNarrowRegular', ArialNarrow, Arial, Tahoma, sans-serif;
+  margin: 0;
+  text-transform: uppercase;
+}
+.page-header .menu_sub {
+  margin-top: 5px;
+}
+/* page-header > */
+/* aside block < */
+.aside .aside__header {
+  height: 50px;
+  position: relative;
+  overflow: hidden;
+}
+.aside .aside__header .link {
+  color: #fff;
+  display: table-cell;
+  font: 14px/20px 'PTSansNarrowRegular', ArialNarrow, Arial, Tahoma, sans-serif;
+  height: 50px;
+  vertical-align: middle;
+  text-decoration: none;
+  text-transform: uppercase;
+  word-break: break-all;
+  width: 300px;
+}
+.aside .aside__header .aside__header__text {
+  display: inline-block;
+  padding: 3px 15px 0;
+  vertical-align: middle;
+}
+.aside .aside__header .userpic {
+  display: inline-block;
+  vertical-align: middle;
+}
+.aside .aside__thumbnail {
+  display: block;
+  height: auto;
+  width: 100%;
+}
+.aside .guides-list__item {
+  background: #d6d9dd;
+  border-top: 1px solid #ebecee;
+  -webkit-transition: all 0.2s ease;
+  transition: all 0.2s ease;
+}
+.aside .guides-list__item:hover {
+  background: #dfe1e4;
+}
+/* aside block > */
+/* guides-list < */
+.guides-list__item {
+  background: #f2f3f2;
+  display: block;
+  height: 50px;
+  position: relative;
+  overflow: hidden;
+  width: 100%;
+}
+.guides-list__item .link {
+  display: block;
+  height: 100%;
+  padding-right: 65px;
+  padding-left: 10px;
+  text-decoration: none;
+  text-transform: uppercase;
+  overflow: hidden;
+}
+.guides-list__item .guide-title {
+  color: #5e6971;
+  font: 14px/20px 'PTSansNarrowRegular', ArialNarrow, Arial, Tahoma, sans-serif;
+  display: table-cell;
+  vertical-align: middle;
+  height: 50px;
+  word-break: break-all;
+}
+.guide-points {
+  color: #9aa1a6;
+  line-height: 50px;
+  position: absolute;
+  right: 10px;
+  top: 0;
+}
+/* guides-list > */
+/* selector < */
+.selector {
+  background: #cdd0d3;
+}
+.selector .selector__item {
+  background: #bdc2c8;
+  float: left;
+  margin: 1px 0 0 1px;
+}
+.selector .selector__item .link {
+  color: #4b5962;
+  display: block;
+  font-size: 13px;
+  text-decoration: none;
+  text-align: center;
+  -webkit-transition: background 0.2s ease;
+  transition: background 0.2s ease;
+}
+.selector .selector__item_active .link,
+.selector .selector__item:hover .link {
+  background: #4b5962;
+  color: #fff;
+}
+.selector .selector__item_disabled .link,
+.selector .selector__item_disabled:hover .link {
+  background: #c9cdd2;
+  color: #979fa5;
+  cursor: default;
+}
+.selector_alphabet .link {
+  height: 29px;
+  line-height: 29px;
+  width: 29px;
+}
+/* selector > */
+/* clearing > */
 .clearfix:after,
 .nav:after,
 .header:after,
-.row:after {
+.row:after,
+.page-content:after,
+.columns-layout:after,
+.selector:after {
   content: "";
   clear: both;
   display: block;
