--- a/code/less/fonts.less
+++ b/code/less/fonts.less
@@ -20,7 +20,17 @@
     font-style: normal;
 
 }
+@font-face {
+    font-family: 'PTSansItalic';
+    src: url('../fonts/PTS56F-webfont.eot');
+    src: url('../fonts/PTS56F-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/PTS56F-webfont.woff') format('woff'),
+         url('../fonts/PTS56F-webfont.ttf') format('truetype'),
+         url('../fonts/PTS56F-webfont.svg#PTSansItalic') format('svg');
+    font-weight: normal;
+    font-style: normal;
 
+}
 @font-face {
     font-family: 'PTSansBold';
     src: url('../fonts/PTS75F-webfont.eot');
